--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "re-resizable": "^6.9.17",
     "react": "^18.3.1",
     "react-archer": "^4.4.0",
     "react-dom": "^18.3.1",
